--- a/src/components/css/cards.css
+++ b/src/components/css/cards.css
@@ -1,4 +1,4 @@
-.card-c-hover:hover{
+.card-con-hover:hover{
     /* box-shadow: 5px 10px 20px 1px rgba(255, 255, 255, 0.273); */
     box-shadow: 5px 10px 20px 1px !important;
     transition: all 0.7s linear;
